--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,20 +1,173 @@
 {
-    "newWarehouse": "Новый склад",
-    "warehouse_info": "Информация о складе",
-    "warehouseName": "Название склада",
-    "managerName": "Имя заведующего складом",
-    "warehouseAddress": "Адрес склада",
-    "managerPhone": "Телефон заведующего",
-    "email": "Электронная почта",
-    "password": "Пароль",
-    "cancel": "Отмена",
-    "save": "Сохранить",
-    "enterWarehouseName": "Пожалуйста, введите название склада ❗",
-    "enterFullName": "Пожалуйста, введите полное имя ❗",
-    "enterAddress": "Пожалуйста, введите адрес ❗",
-    "enterPhone": "Пожалуйста, введите номер телефона ❗",
-    "enterEmail": "Пожалуйста, введите email ❗",
-    "enterPassword": "Пожалуйста, введите пароль ❗",
-    "warehouseCreated": "Склад успешно создан ",
-    "errorOccurred": "Произошла ошибка "
+    "language": "Рус",
+    "dashboard": "Главная страница",
+    "partner": "Партнер",
+    "Warehouses": "Склады",
+    "Warehouse": "Склад",
+    "Warehouse_Edit": "Редактировать склад",
+    "Production": "Производство",
+    "Report": "Отчет",
+    "Product_analysis": "Анализ товаров",
+    "Settings": "Настройки",
+    "main": "Основной",
+    "Dashboard_page": "Панель управления",
+    "dilers": "Дилеры",
+    "products": "Продукты",
+    "Total_Value": "Общая стоимость",
+    "Receipts_in_month": "Поступления (за текущий месяц)",
+    "Output_in_mont": "Расход (за текущий месяц)",
+    "Select_yers": "Выберите год",
+    "Select_month": "Выберите месяц",
+    "Search": "Поиск",
+    "Warehouse_money": "Денежное состояние складов",
+    "Warehouse_product": "Товары на складе",
+    "The_most": "Больше всего",
+    "General": "Общее",
+    "Total_products": "Общее количество товаров",
+    "Diler_money": "Сумма по дилерам",
+    "Most_money": "Больше всего денег",
+    "Average": "Среднее",
+    "Deposit_big": "Ежемесячное внесение и рост",
+    "Current_month": "Текущий месяц",
+    "Growth": "Рост",
+    "workers": "Сотрудники",
+    "Detail": "Подробнее",
+    "Create_Warehouse": "Создать склад",
+    "New_Warehouse": "+ Новый склад",
+    "Warehouse_name": "Название склада *",
+    "Warehouse_login": "Логин склада *",
+    "Warehouse_owner_name": "Имя владельца склада *",
+    "Phone_number": "Номер телефона *",
+    "Region": "Область *",
+    "Select_region": "Выберите область",
+    "District": "Район *",
+    "Select_district": "Выберите район",
+    "Password": "Пароль *",
+    "Confirm_password": "Подтвердите пароль *",
+    "Cancel": "Отмена",
+    "Save": "Сохранить",
+    "Saving": "Сохранение...",
+    "Select_region_first": "Сначала выберите область",
+    "success": "Успешно",
+    "Field_required": "Пожалуйста, введите {field}",
+    "Phone_format_error": "Неверный формат телефона (+998xxxxxxxxx)",
+    "Password_min_error": "Пароль должен содержать не менее 6 символов",
+    "Passwords_not_match": "Пароли не совпадают",
+    "Delete_Warehouse": "Удалить склад",
+    "Delete_Warehouse_confirm": "Вы действительно хотите удалить этот склад? Это действие нельзя отменить!",
+    "Warehouse_deleted_success": "Склад успешно удален",
+    "Deleting": "Удаление...",
+    "Delete": "Удалить",
+    "Error_occurred": "Произошла ошибка",
+    "Product_catalog": "Каталог товаров",
+    "Select_product": "Выбранные товары",
+    "deletet": "Удалить",
+    "clear_all": "Очистить все",
+    "Dark_Mode": "Темный режим",
+    "Light_Mode": "Светлый режим",
+    "Screen_Zoom": "Масштаб экрана",
+    "Text_Size": "Размер текста",
+    "Sample_Text": "Тестовый текст",
+    "Text_Size_Description": "Здесь вы можете протестировать размер текста. При каждом изменении значения текст увеличивается или уменьшается.",
+    "Reset_All": "Сбросить все",
+    "Warehouse_Info": "Информация о складе",
+    "Name": "Название",
+    "Type": "Тип",
+    "Address": "Адрес",
+    "Phone": "Телефон",
+    "Email": "Эл. почта",
+    "Balance": "Баланс",
+    "Created": "Создан",
+    "Updated": "Обновлен",
+    "No_Warehouse_Data": "Нет данных о складе",
+    "Permissions": "Разрешения",
+    "Sell_Access": "Доступ к продажам",
+    "Add": "Создать",
+    "Add_partner": "Создать партнера",
+    "Name_partner": "Имя партнера",
+    "Edit": "Редактировать",
+    "Delete_partner": "Удалить партнера",
+    "Delete_partner_text": "Вы действительно хотите удалить этого партнера? Это действие нельзя отменить!",
+    "Sells_inMonth": "Продажи (за текущий месяц)",
+    "Cash_inMonth": "Утилизация (за текущий месяц)",
+    "Empty_data": "Нет данных",
+    "Order": "Заказ",
+    "Clients": "Клиенты",
+    "Clients_payment": "Платежи клиентов",
+    "Clients_debtor": "Должники",
+    "Clients_sverka": "Анализ клиентов",
+    "Kurier": "Курьер",
+    "expenses": "Расходы",
+    "Kassa": "Касса",
+    "Coming": "Приход",
+    "Shipment": "Расход",
+    "Payment_type": "Тип оплаты",
+    "Client_type": "Тип клиента",
+    "Price_type": "Тип цены",
+    "Opt_warehouse": "Операции склада",
+    "Others": "Прочее",
+    "warehouseTitle": "Товары на складе",
+    "addBarcodeButton": "Добавить штрихкод",
+    "noProductsMessage": "На складе нет товаров",
+    "columnProductName": "Название товара",
+    "columnBatch": "Партия",
+    "columnSalePrice": "Цена продажи",
+    "columnPurchasePrice": "Цена закупки",
+    "columnQuantity": "Количество",
+    "columnDraftQuantity": "Количество черновиков",
+    "columnBarcode": "Штрихкод",
+    "columnDate": "Дата",
+    "columnActions": "Действия",
+    "noData": "—",
+    "loadingMoreText": "Загрузка...",
+    "loadMoreButton": "Показать еще",
+    "dateMissingMessage": "Нет данных",
+    "Edit_Barcode": "Редактировать штрихкод",
+    "add_Barcode": "Создать штрихкод",
+    "generate_barcode": "Сгенерировать новый штрихкод",
+    "Print": "Печать",
+    "Again_create": "Создать снова",
+    "Close": "Закрыть",
+    "Edit_Price": "Изменить цену",
+    "Edit_Product": "Редактировать данные",
+    "New_price": "Новая цена",
+    "dixed": "Фиксированный",
+    "dixed_of": "Нефиксированный",
+    "Search_name": "Поиск по имени",
+    "Add_clients": "Создать клиента",
+    "Firstname": "Имя",
+    "select_type_client": "Выберите тип клиента",
+    "Client_Edit": "Редактировать клиента",
+    "Delete_Client": "Удалить клиента",
+    "Delete_Client_text": "Вы действительно хотите удалить клиента?",
+    "Create_Payment": "Создать платеж",
+    "Price__sum": "Сумма",
+    "Comment": "Комментарий",
+    "Contact_info": "Контактная информация",
+    "Finance": "Финансы",
+    "Statictik": "Статистика",
+    "Register": "Регистрация",
+    "inVoice": "Накладные",
+    "Return": "Возвраты",
+    "Payment_History": "История оплаты",
+    "Payment": "Оплатить",
+    "Invoice": "Накладная",
+    "Total_price": "Общая сумма",
+    "Status": "Статус",
+    "Empty_invoice": "Нет полученных накладных",
+    "Empty_invoice_client": "У этого клиента пока нет полученных накладных",
+    "f_payment": "Платеж",
+    "Price_payment": "Сумма платежа",
+    "Payment_method": "Метод оплаты",
+    "Payment_EmtyData": "Нет истории платежей",
+    "Payment_EmtyData_text": " У этого клиента пока нет истории платежей",
+    "Create_Diler": "Создать дилера",
+    "Clients_Payment": "Оплата клиентов",
+    "Srearch_by_Clients": "Поиск по клиенту",
+    "StartDate": "Начало",
+    "EndDate": "Конец",
+    "Payment_price": "Сумма оплаты",
+    "payment_date": "Дата оплаты",
+    "Creater": "Создал",
+    "Over": "Итоги"
 }
