--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -1,5 +1,173 @@
 {
-    "welcome": "Xush kelibsiz!",
-    "hello": "Salom, dunyo!",
-    "language": "Tilni tanlang"
+    "language": "Uz",
+    "dashboard": "Bosh sahifa",
+    "partner": "Hamkor",
+    "Warehouses": "Omborlar",
+    "Warehouse": "Ombor",
+    "Warehouse_Edit": "Omborni tahrirlash",
+    "Production": "Ishlab chiqarish",
+    "Report": "Hisobot",
+    "Product_analysis": "Mahsulot tahlili",
+    "Settings": "Sozlamalar",
+    "main": "Asosiy",
+    "Dashboard_page": "Boshqaruv paneli",
+    "dilers": "Dilerlar",
+    "products": "Mahsulotlar",
+    "Total_Value": "Umumiy qiymat",
+    "Receipts_in_month": "Kirim (joriy oy uchun)",
+    "Output_in_mont": "Chiqim (joriy oy uchun)",
+    "Select_yers": "Yilni tanlang",
+    "Select_month": "Oyni tanlang",
+    "Search": "Qidirish",
+    "Warehouse_money": "Omborlardagi pul holati",
+    "Warehouse_product": "Ombordagi mahsulotlar",
+    "The_most": "Eng ko‘p",
+    "General": "Umumiy",
+    "Total_products": "Umumiy mahsulotlar soni",
+    "Diler_money": "Dilerlar bo‘yicha pul miqdori",
+    "Most_money": "Eng ko‘p pul",
+    "Average": "O‘rtacha",
+    "Deposit_big": "Oyma-oy pul kiritish va o‘sish",
+    "Current_month": "Joriy oy",
+    "Growth": "O‘sish",
+    "workers": "Xodimlar",
+    "Detail": "Batafsil",
+    "Create_Warehouse": "Ombor yaratish",
+    "New_Warehouse": "+ Yangi ombor",
+    "Warehouse_name": "Ombor nomi *",
+    "Warehouse_login": "Ombor logini *",
+    "Warehouse_owner_name": "Ombor egasi ismi *",
+    "Phone_number": "Telefon raqami *",
+    "Region": "Viloyat *",
+    "Select_region": "Viloyatni tanlang",
+    "District": "Tuman *",
+    "Select_district": "Tumanni tanlang",
+    "Password": "Parol *",
+    "Confirm_password": "Parolni tasdiqlang *",
+    "Cancel": "Bekor qilish",
+    "Save": "Saqlash",
+    "Saving": "Saqlanmoqda...",
+    "Select_region_first": "Avval viloyatni tanlang",
+    "success": "Muvaffaqiyatli",
+    "Field_required": "Iltimos, {field} kiriting",
+    "Phone_format_error": "Telefon raqam noto‘g‘ri formatda (+998xxxxxxxxx)",
+    "Password_min_error": "Parol kamida 6 belgidan iborat bo‘lishi kerak",
+    "Passwords_not_match": "Parollar mos kelmadi",
+    "Delete_Warehouse": "Omborni o‘chirish",
+    "Delete_Warehouse_confirm": "Siz haqiqatdan ham bu omborni o‘chirmoqchimisiz? Bu amalni qaytarib bo‘lmaydi!",
+    "Warehouse_deleted_success": "Ombor muvaffaqiyatli o‘chirildi",
+    "Deleting": "O‘chirilmoqda...",
+    "Delete": "O‘chirish",
+    "Error_occurred": "Xatolik yuz berdi",
+    "Product_catalog": "Mahsulot katalogi",
+    "Select_product": "Tanlangan mahsulotlar",
+    "deletet": "Olib tashlash",
+    "clear_all": "Hammasini tozalash",
+    "Dark_Mode": "Qorong‘i rejim",
+    "Light_Mode": "Yorug‘ rejim",
+    "Screen_Zoom": "Ekran masshtabi",
+    "Text_Size": "Matn hajmi",
+    "Sample_Text": "Sinov matni",
+    "Text_Size_Description": "Bu yerda matn hajmini sinab ko‘rishingiz mumkin. Qiymatni o‘zgartirsangiz, matn darhol kattalashadi yoki kichrayadi.",
+    "Reset_All": "Hammasini tiklash",
+    "Warehouse_Info": "Ombor haqida ma’lumot",
+    "Name": "Nomi",
+    "Type": "Turi",
+    "Address": "Manzil",
+    "Phone": "Telefon",
+    "Email": "Email",
+    "Balance": "Balans",
+    "Created": "Yaratilgan",
+    "Updated": "Yangilangan",
+    "No_Warehouse_Data": "Ombor haqida ma’lumot yo‘q",
+    "Permissions": "Ruxsatlar",
+    "Sell_Access": "Sotish uchun ruxsat",
+    "Add": "Qo‘shish",
+    "Add_partner": "Hamkor yaratish",
+    "Name_partner": "Hamkor nomi",
+    "Edit": "Tahrirlash",
+    "Delete_partner": "Hamkorni o‘chirish",
+    "Delete_partner_text": "Haqiqatan ham bu hamkorni oʻchirib tashlamoqchimisiz? Bu amalni ortga qaytarib bo‘lmaydi!",
+    "Sells_inMonth": "Sotuv (joriy oy uchun)",
+    "Cash_inMonth": "Utilizatsiya (joriy oy uchun)",
+    "Empty_data": "Ma’lumot mavjud emas",
+    "Order": "Buyurtma",
+    "Clients": "Mijozlar",
+    "Clients_payment": "Mijozlar to‘lovi",
+    "Clients_debtor": "Qarzdor mijozlar",
+    "Clients_sverka": "Mijozlar tahlili",
+    "Kurier": "Kuryer",
+    "expenses": "Xarajatlar",
+    "Kassa": "Kassa",
+    "Coming": "Kirim",
+    "Shipment": "Chiqim",
+    "Payment_type": "To‘lov turi",
+    "Client_type": "Mijoz turi",
+    "Price_type": "Narx turi",
+    "Opt_warehouse": "Ombor operatsiyalari",
+    "Others": "Boshqalar",
+    "warehouseTitle": "Ombordagi mahsulotlar",
+    "addBarcodeButton": "Barcode qo‘shish",
+    "noProductsMessage": "Omborda mahsulot mavjud emas",
+    "columnProductName": "Mahsulot nomi",
+    "columnBatch": "Partiya",
+    "columnSalePrice": "Sotuv narxi",
+    "columnPurchasePrice": "Tan narxi",
+    "columnQuantity": "Soni",
+    "columnDraftQuantity": "Draft soni",
+    "columnBarcode": "Barcode",
+    "columnDate": "Sana",
+    "columnActions": "Amallar",
+    "noData": "—",
+    "loadingMoreText": "Yuklanmoqda...",
+    "loadMoreButton": "Yana ko‘rish",
+    "dateMissingMessage": "Ma’lumot mavjud emas",
+    "Edit_Barcode": "Barcode tahrirlash",
+    "add_Barcode": "Barcode yaratish",
+    "generate_barcode": "Yangi barcode yaratish",
+    "Print": "Chop etish",
+    "Again_create": "Yana yaratish",
+    "Close": "Yopish",
+    "Edit_Price": "Narxni o‘zgartirish",
+    "Edit_Product": "Ma’lumotni tahrirlash",
+    "New_price": "Yangi narx",
+    "dixed": "Cheklangan",
+    "dixed_of": "Cheklanmagan",
+    "Search_name": "Ism bo‘yicha izlash",
+    "Add_clients": "Mijoz yaratish",
+    "Firstname": "Ism",
+    "select_type_client": "Mijoz turini tanlang",
+    "Client_Edit": "Mijozni tahrirlash",
+    "Delete_Client": "Mijozni o‘chirish",
+    "Delete_Client_text": "Mijozni o‘chirib tashlamoqchimisiz?",
+    "Create_Payment": "To‘lov yaratish",
+    "Price__sum": "Miqdor",
+    "Comment": "Izoh",
+    "Contact_info": "Aloqa ma’lumotlari",
+    "Finance": "Moliya",
+    "Statictik": "Statistika",
+    "Register": "Ro‘yxat",
+    "inVoice": "Hisob-fakturalar",
+    "Return": "Qaytishlar",
+    "Payment_History": "To‘lov tarixi",
+    "Payment": "To‘lov",
+    "Invoice": "Hisob-faktura",
+    "Total_price": "Umumiy summa",
+    "Status": "Holat",
+    "Empty_invoice": "Hisob-fakturalar mavjud emas",
+    "Empty_invoice_client": "Bu mijozda hozircha hisob-fakturalar yo‘q",
+    "f_payment": "To‘lov",
+    "Price_payment": "To‘lov miqdori",
+    "Payment_method": "To‘lov usuli",
+    "Payment_EmtyData": "To‘lov tarixi yo‘q",
+    "Payment_EmtyData_text": "Bu mijozda hozircha to‘lov tarixi yo‘q",
+    "Create_Diler": "Diler yaratish",
+    "Clients_Payment": "Mijozlar to‘lovi",
+    "Srearch_by_Clients": "Mijoz bo‘yicha izlash",
+    "StartDate": "Boshlanish",
+    "EndDate": "Tugash",
+    "Payment_price": "To‘lov summasi",
+    "payment_date": "To‘lov sanasi",
+    "Creater": "Yaratuvchi",
+    "Over": "Yakuniy"
 }
