--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,173 @@
 {
-  "warehouse_info": "Warehouse Information",
-  "no_warehouses": "No warehouses available",
-  "users": "Users",
-  "error_occurred": "An error occurred ❌",
-  "no_parent_id": "Parent ID not found"
+  "language": "English",
+  "dashboard": "Dashboard",
+  "partner": "Partner",
+  "Warehouses": "Warehouses",
+  "Warehouse": "Warehouse",
+  "Warehouse_Edit": "Edit Warehouse",
+  "Production": "Production",
+  "Report": "Report",
+  "Product_analysis": "Product Analysis",
+  "Settings": "Settings",
+  "main": "Main",
+  "Dashboard_page": "Control Panel",
+  "dilers": "Dealers",
+  "products": "Products",
+  "Total_Value": "Total Value",
+  "Receipts_in_month": "Receipts (Current Month)",
+  "Output_in_mont": "Expenses (Current Month)",
+  "Select_yers": "Select Year",
+  "Select_month": "Select Month",
+  "Search": "Search",
+  "Warehouse_money": "Warehouse Financial Status",
+  "Warehouse_product": "Products in Warehouse",
+  "The_most": "Most",
+  "General": "General",
+  "Total_products": "Total Number of Products",
+  "Diler_money": "Dealers' Total Amount",
+  "Most_money": "Most Money",
+  "Average": "Average",
+  "Deposit_big": "Monthly Deposit and Growth",
+  "Current_month": "Current Month",
+  "Growth": "Growth",
+  "workers": "Employees",
+  "Detail": "Details",
+  "Create_Warehouse": "Create Warehouse",
+  "New_Warehouse": "+ New Warehouse",
+  "Warehouse_name": "Warehouse Name *",
+  "Warehouse_login": "Warehouse Login *",
+  "Warehouse_owner_name": "Warehouse Owner Name *",
+  "Phone_number": "Phone Number *",
+  "Region": "Region *",
+  "Select_region": "Select Region",
+  "District": "District *",
+  "Select_district": "Select District",
+  "Password": "Password *",
+  "Confirm_password": "Confirm Password *",
+  "Cancel": "Cancel",
+  "Save": "Save",
+  "Saving": "Saving...",
+  "Select_region_first": "Select Region First",
+  "success": "Success",
+  "Field_required": "Please enter {field}",
+  "Phone_format_error": "Invalid phone format (+998xxxxxxxxx)",
+  "Password_min_error": "Password must be at least 6 characters",
+  "Passwords_not_match": "Passwords do not match",
+  "Delete_Warehouse": "Delete Warehouse",
+  "Delete_Warehouse_confirm": "Are you sure you want to delete this warehouse? This action cannot be undone!",
+  "Warehouse_deleted_success": "Warehouse successfully deleted",
+  "Deleting": "Deleting...",
+  "Delete": "Delete",
+  "Error_occurred": "An error occurred",
+  "Product_catalog": "Product Catalog",
+  "Select_product": "Selected Products",
+  "deletet": "Delete",
+  "clear_all": "Clear All",
+  "Dark_Mode": "Dark Mode",
+  "Light_Mode": "Light Mode",
+  "Screen_Zoom": "Screen Zoom",
+  "Text_Size": "Text Size",
+  "Sample_Text": "Sample Text",
+  "Text_Size_Description": "You can test text size here. Whenever you change the value, the text immediately resizes.",
+  "Reset_All": "Reset All",
+  "Warehouse_Info": "Warehouse Information",
+  "Name": "Name",
+  "Type": "Type",
+  "Address": "Address",
+  "Phone": "Phone",
+  "Email": "Email",
+  "Balance": "Balance",
+  "Created": "Created",
+  "Updated": "Updated",
+  "No_Warehouse_Data": "No warehouse data available",
+  "Permissions": "Permissions",
+  "Sell_Access": "Sales Access",
+  "Add": "Add",
+  "Add_partner": "Add Partner",
+  "Name_partner": "Partner Name",
+  "Edit": "Edit",
+  "Delete_partner": "Delete Partner",
+  "Delete_partner_text": "Are you sure you want to delete this partner? This action cannot be undone!",
+  "Sells_inMonth": "Sales (Current Month)",
+  "Cash_inMonth": "Utilization (Current Month)",
+  "Empty_data": "No Data",
+  "Order": "Order",
+  "Clients": "Clients",
+  "Clients_payment": "Client Payments",
+  "Clients_debtor": "Debtor Clients",
+  "Clients_sverka": "Client Analysis",
+  "Kurier": "Courier",
+  "expenses": "Expenses",
+  "Kassa": "Cashbox",
+  "Coming": "Incoming",
+  "Shipment": "Outgoing",
+  "Payment_type": "Payment Type",
+  "Client_type": "Client Type",
+  "Price_type": "Price Type",
+  "Opt_warehouse": "Warehouse Operations",
+  "Others": "Others",
+  "warehouseTitle": "Products in Warehouse",
+  "addBarcodeButton": "Add Barcode",
+  "noProductsMessage": "No products in warehouse",
+  "columnProductName": "Product Name",
+  "columnBatch": "Batch",
+  "columnSalePrice": "Sale Price",
+  "columnPurchasePrice": "Purchase Price",
+  "columnQuantity": "Quantity",
+  "columnDraftQuantity": "Draft Quantity",
+  "columnBarcode": "Barcode",
+  "columnDate": "Date",
+  "columnActions": "Actions",
+  "noData": "—",
+  "loadingMoreText": "Loading...",
+  "loadMoreButton": "Load More",
+  "dateMissingMessage": "No Data Available",
+  "Edit_Barcode": "Edit Barcode",
+  "add_Barcode": "Add Barcode",
+  "generate_barcode": "Generate New Barcode",
+  "Print": "Print",
+  "Again_create": "Create Again",
+  "Close": "Close",
+  "Edit_Price": "Change Price",
+  "Edit_Product": "Edit Product Info",
+  "New_price": "New Price",
+  "dixed": "Fixed",
+  "dixed_of": "Not Fixed",
+  "Search_name": "Search by Name",
+  "Add_clients": "Create Client",
+  "Firstname": "Name",
+  "select_type_client": "Select Client Type",
+  "Client_Edit": "Edit Client",
+  "Delete_Client": "Delete Client",
+  "Delete_Client_text": "Are you sure you want to delete this client?",
+  "Create_Payment": "Create Payment",
+  "Price__sum": "Amount",
+  "Comment": "Comment",
+  "Contact_info": "Contact Info",
+  "Finance": "Finance",
+  "Statictik": "Statistics",
+  "Register": "Register",
+  "inVoice": "Invoices",
+  "Return": "Returns",
+  "Payment_History": "Payment History",
+  "Payment": "Payment",
+  "Invoice": "Invoice",
+  "Total_price": "Total Price",
+  "Status": "Status",
+  "Empty_invoice": "No Invoices Received",
+  "Empty_invoice_client": "This client has no invoices yet",
+  "f_payment": "Payment",
+  "Price_payment": "Payment Amount",
+  "Payment_method": "Payment Method",
+  "Payment_EmtyData": "No Payment History",
+  "Payment_EmtyData_text": "This client has no payment history yet",
+  "Create_Diler": "Create Dealer",
+  "Clients_Payment": "Client Payments",
+  "Srearch_by_Clients": "Search by Client",
+  "StartDate": "Start",
+  "EndDate": "End",
+  "Payment_price": "Payment Amount",
+  "payment_date": "Payment Date",
+  "Creater": "Created By",
+  "Over": "Total"
 }
