--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "language": "English",
+  "language": "Eng",
   "dashboard": "Dashboard",
   "partner": "Partner",
   "Warehouses": "Warehouses",
@@ -19,15 +19,16 @@
   "Select_yers": "Select Year",
   "Select_month": "Select Month",
   "Search": "Search",
-  "Warehouse_money": "Warehouse Financial Status",
+  "Searching": "Searching...",
+  "Warehouse_money": "Warehouse Financial State",
   "Warehouse_product": "Products in Warehouse",
   "The_most": "Most",
   "General": "General",
   "Total_products": "Total Number of Products",
-  "Diler_money": "Dealers' Total Amount",
+  "Diler_money": "Dealers' Amount",
   "Most_money": "Most Money",
   "Average": "Average",
-  "Deposit_big": "Monthly Deposit and Growth",
+  "Deposit_big": "Monthly Income and Growth",
   "Current_month": "Current Month",
   "Growth": "Growth",
   "workers": "Employees",
@@ -59,6 +60,7 @@
   "Deleting": "Deleting...",
   "Delete": "Delete",
   "Error_occurred": "An error occurred",
+  "Error": "Error",
   "Product_catalog": "Product Catalog",
   "Select_product": "Selected Products",
   "deletet": "Delete",
@@ -68,7 +70,7 @@
   "Screen_Zoom": "Screen Zoom",
   "Text_Size": "Text Size",
   "Sample_Text": "Sample Text",
-  "Text_Size_Description": "You can test text size here. Whenever you change the value, the text immediately resizes.",
+  "Text_Size_Description": "Here you can test the text size. Each change increases or decreases the text.",
   "Reset_All": "Reset All",
   "Warehouse_Info": "Warehouse Information",
   "Name": "Name",
@@ -79,7 +81,7 @@
   "Balance": "Balance",
   "Created": "Created",
   "Updated": "Updated",
-  "No_Warehouse_Data": "No warehouse data available",
+  "No_Warehouse_Data": "No Warehouse Data",
   "Permissions": "Permissions",
   "Sell_Access": "Sales Access",
   "Add": "Add",
@@ -89,14 +91,14 @@
   "Delete_partner": "Delete Partner",
   "Delete_partner_text": "Are you sure you want to delete this partner? This action cannot be undone!",
   "Sells_inMonth": "Sales (Current Month)",
-  "Cash_inMonth": "Utilization (Current Month)",
+  "Cash_inMonth": "Cash Out (Current Month)",
   "Empty_data": "No Data",
   "Order": "Order",
   "Clients": "Clients",
   "Clients_payment": "Client Payments",
-  "Clients_debtor": "Debtor Clients",
+  "Clients_debtor": "Debtors",
   "Clients_sverka": "Client Analysis",
-  "Kurier": "Courier",
+  "Kurier": "Couriers",
   "expenses": "Expenses",
   "Kassa": "Cashbox",
   "Coming": "Incoming",
@@ -106,9 +108,9 @@
   "Price_type": "Price Type",
   "Opt_warehouse": "Warehouse Operations",
   "Others": "Others",
-  "warehouseTitle": "Products in Warehouse",
+  "warehouseTitle": "Warehouse Products",
   "addBarcodeButton": "Add Barcode",
-  "noProductsMessage": "No products in warehouse",
+  "noProductsMessage": "No Products in Warehouse",
   "columnProductName": "Product Name",
   "columnBatch": "Batch",
   "columnSalePrice": "Sale Price",
@@ -121,20 +123,20 @@
   "noData": "—",
   "loadingMoreText": "Loading...",
   "loadMoreButton": "Load More",
-  "dateMissingMessage": "No Data Available",
+  "dateMissingMessage": "No Data",
   "Edit_Barcode": "Edit Barcode",
   "add_Barcode": "Add Barcode",
   "generate_barcode": "Generate New Barcode",
   "Print": "Print",
   "Again_create": "Create Again",
   "Close": "Close",
-  "Edit_Price": "Change Price",
-  "Edit_Product": "Edit Product Info",
+  "Edit_Price": "Edit Price",
+  "Edit_Product": "Edit Product",
   "New_price": "New Price",
   "dixed": "Fixed",
   "dixed_of": "Not Fixed",
   "Search_name": "Search by Name",
-  "Add_clients": "Create Client",
+  "Add_clients": "Add Client",
   "Firstname": "Name",
   "select_type_client": "Select Client Type",
   "Client_Edit": "Edit Client",
@@ -143,7 +145,7 @@
   "Create_Payment": "Create Payment",
   "Price__sum": "Amount",
   "Comment": "Comment",
-  "Contact_info": "Contact Info",
+  "Contact_info": "Contact Information",
   "Finance": "Finance",
   "Statictik": "Statistics",
   "Register": "Register",
@@ -152,9 +154,9 @@
   "Payment_History": "Payment History",
   "Payment": "Payment",
   "Invoice": "Invoice",
-  "Total_price": "Total Price",
+  "Total_price": "Total Amount",
   "Status": "Status",
-  "Empty_invoice": "No Invoices Received",
+  "Empty_invoice": "No Invoices",
   "Empty_invoice_client": "This client has no invoices yet",
   "f_payment": "Payment",
   "Price_payment": "Payment Amount",
@@ -164,10 +166,57 @@
   "Create_Diler": "Create Dealer",
   "Clients_Payment": "Client Payments",
   "Srearch_by_Clients": "Search by Client",
-  "StartDate": "Start",
-  "EndDate": "End",
+  "StartDate": "Start Date",
+  "EndDate": "End Date",
   "Payment_price": "Payment Amount",
   "payment_date": "Payment Date",
   "Creater": "Created By",
-  "Over": "Total"
+  "Over": "Summary",
+  "Debtor_title": "Client Debt Table",
+  "Factory": "Factory",
+  "Debt": "Debt",
+  "Total_debt": "Total Debt:",
+  "History_Clients": "Client History:",
+  "Select_clients": "Select Client",
+  "Date": "Date",
+  "Paymenter": "Payer",
+  "Taker": "Receiver",
+  "Method": "Method",
+  "Create_Kurier": "Create Courier",
+  "Edit_Kurier": "Edit Courier",
+  "Delete_Kurier": "Delete Courier",
+  "Delete_Kurier__text": "Are you sure you want to delete this courier?",
+  "Warehouse_Exp": "Warehouse Expenses",
+  "Summ": "Amount",
+  "Create_Exp": "Create New Expense",
+  "Delete_exp": "Delete Expense",
+  "Delete_exp_text": "Are you sure you want to delete this expense?",
+  "Edit_exp": "Edit Expense",
+  "Create_Cash": "Create Cashbox",
+  "Edit_Cash": "Edit Cashbox",
+  "Delet_Cash": "Delete Cashbox",
+  "Delet_Cash_text": "Are you sure you want to delete this cashbox?",
+  "Payment_type_Careate": "Create Payment Type",
+  "Payment_type_Edit": "Edit Payment Type",
+  "Payment_type_Delete": "Delete Payment Type",
+  "Payment_type_Delete_text": "Are you sure you want to delete this type?",
+  "Category_Client": "Client Categories",
+  "Category_Client_Create": "Create Client Category",
+  "Category_Client_Delete": "Delete Client Category",
+  "Category_Client_Delete_text": "Are you sure you want to delete this category?",
+  "Category_Client_Edit": "Edit Client Category",
+  "Type_Price": "Create Price Type",
+  "Type_Price_delete": "Delete Price Type",
+  "Type_Price_delete_text": "Are you sure you want to delete this type?",
+  "Type_Price_Edit": "Edit Price Type",
+  "Mon_mash": "Screen Zoom",
+  "Text_size": "Text Size",
+  "Test_text": "Sample Text",
+  "Test_text2": "Here you can test text size. Each change increases or decreases text automatically.",
+  "restart": "Reset All",
+  "Qr_text": "Barcode Operation Method",
+  "Qr_text2": "Automatic selection of the last batch",
+  "Qr_text3": "Selection by modal",
+  "Qr_text4": "When scanning a barcode, the system automatically selects the last batch and adds it to the invoice. Convenient for fast work.",
+  "Qr_text5": "When scanning a barcode, the system shows batches in a list so you can choose manually. Convenient for accuracy."
 }
