--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -19,6 +19,7 @@
     "Select_yers": "Выберите год",
     "Select_month": "Выберите месяц",
     "Search": "Поиск",
+    "Searching": "Поиск...",
     "Warehouse_money": "Денежное состояние складов",
     "Warehouse_product": "Товары на складе",
     "The_most": "Больше всего",
@@ -59,6 +60,7 @@
     "Deleting": "Удаление...",
     "Delete": "Удалить",
     "Error_occurred": "Произошла ошибка",
+    "Error": "Произошла ошибка",
     "Product_catalog": "Каталог товаров",
     "Select_product": "Выбранные товары",
     "deletet": "Удалить",
@@ -96,7 +98,7 @@
     "Clients_payment": "Платежи клиентов",
     "Clients_debtor": "Должники",
     "Clients_sverka": "Анализ клиентов",
-    "Kurier": "Курьер",
+    "Kurier": "Доставшики",
     "expenses": "Расходы",
     "Kassa": "Касса",
     "Coming": "Приход",
@@ -169,5 +171,52 @@
     "Payment_price": "Сумма оплаты",
     "payment_date": "Дата оплаты",
     "Creater": "Создал",
-    "Over": "Итоги"
+    "Over": "Итоги",
+    "Debtor_title": "Общая таблица долгов клиентов",
+    "Factory": "Фабрика",
+    "Debt": "Долг",
+    "Total_debt": "Общий долг:",
+    "History_Clients": "История клиента:",
+    "Select_clients": "Выберите клиента",
+    "Date": "Дата",
+    "Paymenter": "Плательщик",
+    "Taker": "Получатель",
+    "Method": "Метод",
+    "Create_Kurier": "Создание Доставщика",
+    "Edit_Kurier": "Редактирование Доставщика",
+    "Delete_Kurier": "Удаления Доствшика",
+    "Delete_Kurier__text": "Вы действительно хотите удалить Доствшика ?",
+    "Warehouse_Exp": "Расходы склада",
+    "Summ": "Сумма",
+    "Create_Exp": "Создать новый расход",
+    "Delete_exp": "Удалить расход",
+    "Delete_exp_text": " Вы точно хотите удалить расход ?",
+    "Edit_exp": "Редактировать расход",
+    "Create_Cash": "Создание кассы",
+    "Edit_Cash": "Изменения кассы",
+    "Delet_Cash": "Удаления Кассы",
+    "Delet_Cash_text": "Вы действительно хотите удалить кассу ?",
+    "Payment_type_Careate": "Создание типа оплаты",
+    "Payment_type_Edit": "Изменить тип оплаты",
+    "Payment_type_Delete": "Удаление тип оплаты",
+    "Payment_type_Delete_text": " Вы действительно хотите удалить этот тип?",
+    "Category_Client": "Категории клиентов",
+    "Category_Client_Create": "Создание категории клиента",
+    "Category_Client_Delete": "Удаление категория клиента",
+    "Category_Client_Delete_text": "Вы действительно хотите удалить категория клиента?",
+    "Category_Client_Edit": "Изменение категории",
+    "Type_Price": "Создание типа цены",
+    "Type_Price_delete": "Удаление тип цены",
+    "Type_Price_delete_text": "Вы действительно хотите удалить этот тип?",
+    "Type_Price_Edit": "Изменить тип цены",
+    "Mon_mash": "Маштаб экрана",
+    "Text_size": "Разер текста",
+    "Test_text": "Тестовый текст",
+    "Test_text2": "Здесь вы можете поэкспериментировать с размером текста. Каждый раз при изменении значения текст будет автоматически увеличиваться или уменьшаться.",
+    "restart": "Сбросить все",
+    "Qr_text": "Способ работы с щтрих кодом",
+    "Qr_text2": "Автоматический выбор последней партии",
+    "Qr_text3": "Выбор по модальности",
+    "Qr_text4": "При сканировании штрихкода система автоматически выбирает последнюю партию и добавляет её в счёт. Удобно для ускорения работы.",
+    "Qr_text5": "При сканировании штрихкода система отображает партии в виде списка, и вы вручную выбираете нужную. Удобно для точности."
 }
