--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -1,6 +1,6 @@
 {
-    "language": "Uz",
-    "dashboard": "Bosh sahifa",
+    "language": "Oʻz",
+    "dashboard": "Asosiy sahifa",
     "partner": "Hamkor",
     "Warehouses": "Omborlar",
     "Warehouse": "Ombor",
@@ -14,20 +14,21 @@
     "dilers": "Dilerlar",
     "products": "Mahsulotlar",
     "Total_Value": "Umumiy qiymat",
-    "Receipts_in_month": "Kirim (joriy oy uchun)",
-    "Output_in_mont": "Chiqim (joriy oy uchun)",
+    "Receipts_in_month": "Kelib tushgan (joriy oyda)",
+    "Output_in_mont": "Chiqim (joriy oyda)",
     "Select_yers": "Yilni tanlang",
     "Select_month": "Oyni tanlang",
-    "Search": "Qidirish",
-    "Warehouse_money": "Omborlardagi pul holati",
+    "Search": "Qidiruv",
+    "Searching": "Qidirilmoqda...",
+    "Warehouse_money": "Omborlarning moliyaviy holati",
     "Warehouse_product": "Ombordagi mahsulotlar",
     "The_most": "Eng ko‘p",
     "General": "Umumiy",
-    "Total_products": "Umumiy mahsulotlar soni",
-    "Diler_money": "Dilerlar bo‘yicha pul miqdori",
+    "Total_products": "Jami mahsulotlar soni",
+    "Diler_money": "Dilerlar bo‘yicha summa",
     "Most_money": "Eng ko‘p pul",
     "Average": "O‘rtacha",
-    "Deposit_big": "Oyma-oy pul kiritish va o‘sish",
+    "Deposit_big": "Oylik tushum va o‘sish",
     "Current_month": "Joriy oy",
     "Growth": "O‘sish",
     "workers": "Xodimlar",
@@ -35,8 +36,8 @@
     "Create_Warehouse": "Ombor yaratish",
     "New_Warehouse": "+ Yangi ombor",
     "Warehouse_name": "Ombor nomi *",
-    "Warehouse_login": "Ombor logini *",
-    "Warehouse_owner_name": "Ombor egasi ismi *",
+    "Warehouse_login": "Ombor login *",
+    "Warehouse_owner_name": "Ombor egasining ismi *",
     "Phone_number": "Telefon raqami *",
     "Region": "Viloyat *",
     "Select_region": "Viloyatni tanlang",
@@ -50,53 +51,54 @@
     "Select_region_first": "Avval viloyatni tanlang",
     "success": "Muvaffaqiyatli",
     "Field_required": "Iltimos, {field} kiriting",
-    "Phone_format_error": "Telefon raqam noto‘g‘ri formatda (+998xxxxxxxxx)",
-    "Password_min_error": "Parol kamida 6 belgidan iborat bo‘lishi kerak",
-    "Passwords_not_match": "Parollar mos kelmadi",
+    "Phone_format_error": "Telefon formati noto‘g‘ri (+998xxxxxxxxx)",
+    "Password_min_error": "Parol kamida 6 ta belgidan iborat bo‘lishi kerak",
+    "Passwords_not_match": "Parollar mos emas",
     "Delete_Warehouse": "Omborni o‘chirish",
-    "Delete_Warehouse_confirm": "Siz haqiqatdan ham bu omborni o‘chirmoqchimisiz? Bu amalni qaytarib bo‘lmaydi!",
+    "Delete_Warehouse_confirm": "Rostdan ham ushbu omborni o‘chirilsinmi? Bu amalni qaytarib bo‘lmaydi!",
     "Warehouse_deleted_success": "Ombor muvaffaqiyatli o‘chirildi",
-    "Deleting": "O‘chirilmoqda...",
+    "Deleting": "O‘chirilyapti...",
     "Delete": "O‘chirish",
     "Error_occurred": "Xatolik yuz berdi",
-    "Product_catalog": "Mahsulot katalogi",
+    "Error": "Xatolik",
+    "Product_catalog": "Mahsulotlar katalogi",
     "Select_product": "Tanlangan mahsulotlar",
-    "deletet": "Olib tashlash",
+    "deletet": "O‘chirish",
     "clear_all": "Hammasini tozalash",
-    "Dark_Mode": "Qorong‘i rejim",
+    "Dark_Mode": "Tungi rejim",
     "Light_Mode": "Yorug‘ rejim",
     "Screen_Zoom": "Ekran masshtabi",
     "Text_Size": "Matn hajmi",
     "Sample_Text": "Sinov matni",
-    "Text_Size_Description": "Bu yerda matn hajmini sinab ko‘rishingiz mumkin. Qiymatni o‘zgartirsangiz, matn darhol kattalashadi yoki kichrayadi.",
+    "Text_Size_Description": "Bu yerda matn hajmini sinab ko‘rishingiz mumkin. Har safar o‘lcham o‘zgarganda matn kattalashadi yoki kichrayadi.",
     "Reset_All": "Hammasini tiklash",
     "Warehouse_Info": "Ombor haqida ma’lumot",
     "Name": "Nomi",
     "Type": "Turi",
     "Address": "Manzil",
     "Phone": "Telefon",
-    "Email": "Email",
+    "Email": "Elektron pochta",
     "Balance": "Balans",
-    "Created": "Yaratilgan",
-    "Updated": "Yangilangan",
-    "No_Warehouse_Data": "Ombor haqida ma’lumot yo‘q",
+    "Created": "Yaratilgan sana",
+    "Updated": "Yangilangan sana",
+    "No_Warehouse_Data": "Ombor ma’lumoti yo‘q",
     "Permissions": "Ruxsatlar",
-    "Sell_Access": "Sotish uchun ruxsat",
+    "Sell_Access": "Sotuvga kirish huquqi",
     "Add": "Qo‘shish",
-    "Add_partner": "Hamkor yaratish",
+    "Add_partner": "Hamkor qo‘shish",
     "Name_partner": "Hamkor nomi",
     "Edit": "Tahrirlash",
     "Delete_partner": "Hamkorni o‘chirish",
-    "Delete_partner_text": "Haqiqatan ham bu hamkorni oʻchirib tashlamoqchimisiz? Bu amalni ortga qaytarib bo‘lmaydi!",
-    "Sells_inMonth": "Sotuv (joriy oy uchun)",
-    "Cash_inMonth": "Utilizatsiya (joriy oy uchun)",
-    "Empty_data": "Ma’lumot mavjud emas",
+    "Delete_partner_text": "Rostdan ham ushbu hamkor o‘chirilsinmi? Bu amalni qaytarib bo‘lmaydi!",
+    "Sells_inMonth": "Sotuvlar (joriy oyda)",
+    "Cash_inMonth": "Naqd chiqim (joriy oyda)",
+    "Empty_data": "Ma’lumot yo‘q",
     "Order": "Buyurtma",
     "Clients": "Mijozlar",
-    "Clients_payment": "Mijozlar to‘lovi",
-    "Clients_debtor": "Qarzdor mijozlar",
+    "Clients_payment": "Mijozlar to‘lovlari",
+    "Clients_debtor": "Qarzdorlar",
     "Clients_sverka": "Mijozlar tahlili",
-    "Kurier": "Kuryer",
+    "Kurier": "Yetkazuvchilar",
     "expenses": "Xarajatlar",
     "Kassa": "Kassa",
     "Coming": "Kirim",
@@ -104,70 +106,117 @@
     "Payment_type": "To‘lov turi",
     "Client_type": "Mijoz turi",
     "Price_type": "Narx turi",
-    "Opt_warehouse": "Ombor operatsiyalari",
+    "Opt_warehouse": "Ombor amaliyotlari",
     "Others": "Boshqalar",
     "warehouseTitle": "Ombordagi mahsulotlar",
-    "addBarcodeButton": "Barcode qo‘shish",
-    "noProductsMessage": "Omborda mahsulot mavjud emas",
+    "addBarcodeButton": "Shtrixkod qo‘shish",
+    "noProductsMessage": "Omborda mahsulotlar yo‘q",
     "columnProductName": "Mahsulot nomi",
     "columnBatch": "Partiya",
     "columnSalePrice": "Sotuv narxi",
-    "columnPurchasePrice": "Tan narxi",
-    "columnQuantity": "Soni",
-    "columnDraftQuantity": "Draft soni",
-    "columnBarcode": "Barcode",
+    "columnPurchasePrice": "Xarid narxi",
+    "columnQuantity": "Miqdor",
+    "columnDraftQuantity": "Qoralama miqdori",
+    "columnBarcode": "Shtrixkod",
     "columnDate": "Sana",
     "columnActions": "Amallar",
     "noData": "—",
     "loadingMoreText": "Yuklanmoqda...",
-    "loadMoreButton": "Yana ko‘rish",
-    "dateMissingMessage": "Ma’lumot mavjud emas",
-    "Edit_Barcode": "Barcode tahrirlash",
-    "add_Barcode": "Barcode yaratish",
-    "generate_barcode": "Yangi barcode yaratish",
+    "loadMoreButton": "Yana ko‘rsatish",
+    "dateMissingMessage": "Ma’lumot yo‘q",
+    "Edit_Barcode": "Shtrixkodni tahrirlash",
+    "add_Barcode": "Yangi shtrixkod yaratish",
+    "generate_barcode": "Yangi shtrixkod yaratish",
     "Print": "Chop etish",
     "Again_create": "Yana yaratish",
     "Close": "Yopish",
     "Edit_Price": "Narxni o‘zgartirish",
     "Edit_Product": "Ma’lumotni tahrirlash",
     "New_price": "Yangi narx",
-    "dixed": "Cheklangan",
-    "dixed_of": "Cheklanmagan",
-    "Search_name": "Ism bo‘yicha izlash",
-    "Add_clients": "Mijoz yaratish",
+    "dixed": "Doimiy",
+    "dixed_of": "O‘zgaruvchan",
+    "Search_name": "Ism bo‘yicha qidiruv",
+    "Add_clients": "Mijoz qo‘shish",
     "Firstname": "Ism",
     "select_type_client": "Mijoz turini tanlang",
     "Client_Edit": "Mijozni tahrirlash",
     "Delete_Client": "Mijozni o‘chirish",
-    "Delete_Client_text": "Mijozni o‘chirib tashlamoqchimisiz?",
+    "Delete_Client_text": "Rostdan ham ushbu mijoz o‘chirilsinmi?",
     "Create_Payment": "To‘lov yaratish",
-    "Price__sum": "Miqdor",
+    "Price__sum": "Summasi",
     "Comment": "Izoh",
-    "Contact_info": "Aloqa ma’lumotlari",
-    "Finance": "Moliya",
+    "Contact_info": "Aloqa ma’lumoti",
+    "Finance": "Moliyaviy",
     "Statictik": "Statistika",
-    "Register": "Ro‘yxat",
+    "Register": "Ro‘yxatdan o‘tish",
     "inVoice": "Hisob-fakturalar",
-    "Return": "Qaytishlar",
+    "Return": "Qaytish",
     "Payment_History": "To‘lov tarixi",
     "Payment": "To‘lov",
     "Invoice": "Hisob-faktura",
     "Total_price": "Umumiy summa",
     "Status": "Holat",
     "Empty_invoice": "Hisob-fakturalar mavjud emas",
-    "Empty_invoice_client": "Bu mijozda hozircha hisob-fakturalar yo‘q",
+    "Empty_invoice_client": "Bu mijozda hali hisob-fakturalar yo‘q",
     "f_payment": "To‘lov",
-    "Price_payment": "To‘lov miqdori",
+    "Price_payment": "To‘lov summasi",
     "Payment_method": "To‘lov usuli",
     "Payment_EmtyData": "To‘lov tarixi yo‘q",
-    "Payment_EmtyData_text": "Bu mijozda hozircha to‘lov tarixi yo‘q",
+    "Payment_EmtyData_text": "Bu mijozda hali to‘lovlar tarixi mavjud emas",
     "Create_Diler": "Diler yaratish",
-    "Clients_Payment": "Mijozlar to‘lovi",
-    "Srearch_by_Clients": "Mijoz bo‘yicha izlash",
-    "StartDate": "Boshlanish",
-    "EndDate": "Tugash",
-    "Payment_price": "To‘lov summasi",
+    "Clients_Payment": "Mijoz to‘lovlari",
+    "Srearch_by_Clients": "Mijoz bo‘yicha qidiruv",
+    "StartDate": "Boshlanish sanasi",
+    "EndDate": "Tugash sanasi",
+    "Payment_price": "To‘lov miqdori",
     "payment_date": "To‘lov sanasi",
-    "Creater": "Yaratuvchi",
-    "Over": "Yakuniy"
+    "Creater": "Yaratgan",
+    "Over": "Natijalar",
+    "Debtor_title": "Mijozlarning qarz jadvali",
+    "Factory": "Fabrika",
+    "Debt": "Qarz",
+    "Total_debt": "Jami qarz:",
+    "History_Clients": "Mijoz tarixi:",
+    "Select_clients": "Mijozni tanlang",
+    "Date": "Sana",
+    "Paymenter": "To‘lovchi",
+    "Taker": "Qabul qiluvchi",
+    "Method": "Usul",
+    "Create_Kurier": "Yetkazib beruvchi yaratish",
+    "Edit_Kurier": "Yetkazib beruvchini tahrirlash",
+    "Delete_Kurier": "Yetkazib beruvchini o‘chirish",
+    "Delete_Kurier__text": "Rostdan ham ushbu yetkazib beruvchi o‘chirilsinmi?",
+    "Warehouse_Exp": "Ombor xarajatlari",
+    "Summ": "Summa",
+    "Create_Exp": "Yangi xarajat yaratish",
+    "Delete_exp": "Xarajatni o‘chirish",
+    "Delete_exp_text": "Rostdan ham xarajat o‘chirilsinmi?",
+    "Edit_exp": "Xarajatni tahrirlash",
+    "Create_Cash": "Kassa yaratish",
+    "Edit_Cash": "Kassani tahrirlash",
+    "Delet_Cash": "Kassani o‘chirish",
+    "Delet_Cash_text": "Rostdan ham kassa o‘chirilsinmi?",
+    "Payment_type_Careate": "To‘lov turini yaratish",
+    "Payment_type_Edit": "To‘lov turini tahrirlash",
+    "Payment_type_Delete": "To‘lov turini o‘chirish",
+    "Payment_type_Delete_text": "Rostdan ham bu tur o‘chirilsinmi?",
+    "Category_Client": "Mijoz toifalari",
+    "Category_Client_Create": "Mijoz toifasini yaratish",
+    "Category_Client_Delete": "Mijoz toifasini o‘chirish",
+    "Category_Client_Delete_text": "Rostdan ham bu toifa o‘chirilsinmi?",
+    "Category_Client_Edit": "Mijoz toifasini tahrirlash",
+    "Type_Price": "Narx turini yaratish",
+    "Type_Price_delete": "Narx turini o‘chirish",
+    "Type_Price_delete_text": "Rostdan ham bu tur o‘chirilsinmi?",
+    "Type_Price_Edit": "Narx turini tahrirlash",
+    "Mon_mash": "Ekran masshtabi",
+    "Text_size": "Matn hajmi",
+    "Test_text": "Sinov matni",
+    "Test_text2": "Bu yerda matn hajmini sinab ko‘rishingiz mumkin. Har o‘zgarishda matn avtomatik kattalashadi yoki kichrayadi.",
+    "restart": "Hammasini tiklash",
+    "Qr_text": "Shtrixkod bilan ishlash usuli",
+    "Qr_text2": "So‘nggi partiyani avtomatik tanlash",
+    "Qr_text3": "Modallikka ko‘ra tanlash",
+    "Qr_text4": "Shtrixkod skanerlanganda tizim so‘nggi partiyani avtomatik tanlab, hisobga qo‘shadi. Ishni tezlashtirish uchun qulay.",
+    "Qr_text5": "Shtrixkod skanerlanganda tizim partiyalarni ro‘yxat ko‘rinishida ko‘rsatadi va keraklisini qo‘lda tanlaysiz. Aniqlik uchun qulay."
 }
